Added real-time desktop bookinfo updates (:

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
       "@components/*": ["src/components/*"],
       "@hooks/*": ["src/hooks/*"],
       "@utils/*": ["src/utils/*"],
-      "@types/*": ["src/types/*"]
+      "@types/*": ["src/types/*"],
+      "@contexts/*": ["src/contexts/*"]
     }
   },
   "files": [],
