--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
       "@hooks/*": ["src/hooks/*"],
       "@utils/*": ["src/utils/*"],
       "@types/*": ["src/types/*"],
-      "@contexts/*": ["src/contexts/*"]
+      "@contexts/*": ["src/contexts/*"],
+      "@pages/*": ["src/pages/*"]
     }
   },
   "files": [],
