--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.66.0",
-    "firebase": "^11.2.0",
+    "firebase": "^11.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
+    "sonner": "^2.0.3",
     "swiper": "^11.2.1"
   },
   "devDependencies": {
