--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
       "@types/*": ["src/types/*"],
       "@contexts/*": ["src/contexts/*"],
       "@pages/*": ["src/pages/*"],
-      "@firebase/*": ["src/firebase/*"]
+      "@fb/*": ["src/firebase/*"]
     }
   },
   "files": [],
