Fixed some bugs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
       "@components/*": ["src/components/*"],
       "@hooks/*": ["src/hooks/*"],
       "@utils/*": ["src/utils/*"],
-      "@types/*": ["src/types/*"],
+      "@tp/*": ["src/types/*"],
       "@contexts/*": ["src/contexts/*"],
       "@pages/*": ["src/pages/*"],
       "@fb/*": ["src/firebase/*"]
