--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -30,7 +30,8 @@
       "@tp/*": ["src/types/*"],
       "@contexts/*": ["src/contexts/*"],
       "@pages/*": ["src/pages/*"],
-      "@fb/*": ["src/firebase/*"]
+      "@fb/*": ["src/firebase/*"],
+      "mySwiper/*": ["node_modules/swiper/*"]
     }
   },
   "include": ["src"]
